--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,14 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.omdb_moviedatabase.view.MovieFragment">
+    tools:context="com.example.movie_database.view.MovieFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/tv_movie"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:gravity="center"
         android:textAppearance="?attr/textAppearanceHeadline4"
         android:layout_height="wrap_content"
