--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,5 +18,9 @@
         android:id="@+id/movieFragment"
         android:name="com.example.movie_database.view.MovieFragment"
         android:label="movie_fragment"
-        tools:layout="@layout/movie_fragment" />
+        tools:layout="@layout/movie_fragment" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+    </fragment>
 </navigation>
